maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:67: error: not found: value adjx
        case 1 => if(!aMurNord(x,y) && getIndication(adjX,adjY)==9999){setIndication(adjx,adjY, indic+1)}
                                                                                     ^